test/testData/parser/negative/expressions/incdec.err
test/testData/parser/negative/expressions/incdec.c:3:31: error: cannot increment value of type 'STRUCT S'
test/testData/parser/negative/expressions/incdec.c:3:32: error: cannot decrement value of type 'STRUCT S'
test/testData/parser/negative/expressions/incdec.c:3:33: error: cannot increment value of type 'STRUCT S'
test/testData/parser/negative/expressions/incdec.c:3:34: error: cannot decrement value of type 'STRUCT S'
test/testData/parser/negative/expressions/incdec.c:3:36: error: cannot increment value of type 'signed int[10]'
test/testData/parser/negative/expressions/incdec.c:3:37: error: cannot decrement value of type 'signed int[10]'
test/testData/parser/negative/expressions/incdec.c:3:38: error: cannot decrement value of type 'signed int[10]'
test/testData/parser/negative/expressions/incdec.c:3:39: error: cannot increment value of type 'signed int[10]'
test/testData/parser/negative/expressions/incdec.c:4:41: error: cannot assign to lvalue with const-qualified type 'C signed int'
test/testData/parser/negative/expressions/incdec.c:4:42: error: cannot assign to lvalue with const-qualified type 'C signed int'
test/testData/parser/negative/expressions/incdec.c:3:43: error: cannot assign to lvalue with const-qualified type 'C signed int'
test/testData/parser/negative/expressions/incdec.c:3:44: error: cannot assign to lvalue with const-qualified type 'C signed int'
test/testData/parser/negative/expressions/incdec.c:10:68: error: expression is not assignable
test/testData/parser/negative/expressions/incdec.c:3:69: error: expression is not assignable
test/testData/parser/negative/expressions/incdec.c:3:71: error: cannot take the address of an rvalue of type 'signed int'
test/testData/parser/negative/expressions/incdec.c:3:72: error: expression is not assignable
test/testData/parser/negative/expressions/incdec.c:7:73: error: expression is not assignable
